docs/MainHelp/1.2.040.1/index.MD
## Список уроков
---
### Глава 0. Как сделать, чтобы интерактивная справка работала
   1. [Инструкция: что нужно для работы интерактивных уроков.](https://github.com/Pr-Mex/vanessa-automation/blob/develop/docs/InteractiveHelp/SettingUpInteractiveHelp.md)
   1. Что нужно, чтобы интерактивная справка работала?  [(Видео)](https://youtu.be/IuR7rSvBXUA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава00/ЧтоНужноЧтобыИнтерактивнаяСправкаРаботала.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава00/ЧтоНужноЧтобыИнтерактивнаяСправкаРаботала.MD)


### Глава 1. Знакомство с Vanessa Automation
   1. Что такое Vanessa Automation?  [(Видео)](https://youtu.be/yQYIThmC-RI) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава01/ЧтоТакоеVanessaAutomation.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава01/ЧтоТакоеVanessaAutomation.MD)
   1. Основные элементы формы.  [(Видео)](https://youtu.be/5PdNcB3hpIM) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава01/ЗнакомствоСVanessaAutomationОсновныеЭлементыФормы.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава01/ЗнакомствоСVanessaAutomationОсновныеЭлементыФормы.MD)

### Глава 2. Настройки.
   1. ***Закладка "Запуск сценариев"***
       - Основные элементы закладки "Запуск сценариев"  [(Видео)](https://youtu.be/1POoYvHo4Rc) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ОсновныеЭлементыЗакладкиЗапускСценариев.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ОсновныеЭлементыЗакладкиЗапускСценариев.MD)
       - Панель инструментов редактора
           - Краткий обзор доступных инструментов при работе с редактором (гаечный ключ)  [(Видео)](https://youtu.be/D51Ucup8I8g) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КраткийОбзорДоступныхИнструментовПриРаботеСРедактором.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КраткийОбзорДоступныхИнструментовПриРаботеСРедактором.MD)
           - Панель "Дерево каталогов"  [(Видео)](https://youtu.be/39O6gSqa1oA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ОписаниеПанелиДеревоКаталогов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ОписаниеПанелиДеревоКаталогов.MD)
           - Панель "Работа с git"  [(Видео)](https://youtu.be/tz-4dQGbNTU) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ОписаниеПанелиРаботаСGit.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ОписаниеПанелиРаботаСGit.MD)
           - Настройки, доступные при работе с редактором (шестеренка)
              - Сохранение и загрузка настроек Vanessa Automation  [(Видео)](https://youtu.be/PYk8LhSkEtA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/НастройкиВПанелиРедактораСохранитьЗагрузитьНастройки.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/НастройкиВПанелиРедактораСохранитьЗагрузитьНастройки.MD)
              - Другие настройки  [(Видео)](https://youtu.be/3Lzbzm4Eea0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/НастройкиВПанелиРедактораДругиеНастройки.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/НастройкиВПанелиРедактораДругиеНастройки.MD)
           - Кнопки создания, сохранения и запуска сценариев. Часть1  [(Видео)](https://youtu.be/oxFdpYJYwoQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КнопкиЗапускаСценариевЧастьОдин.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КнопкиЗапускаСценариевЧастьОдин.MD)
           - Кнопки создания, сохранения и запуска сценариев. Часть2  [(Видео)](https://youtu.be/uK0RNmIiUHU) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КнопкиЗапускаСценариевЧастьДва.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КнопкиЗапускаСценариевЧастьДва.MD)
           - Управление озвучкой сценария и записью видео.  [(Видео)](https://youtu.be/xLE5rsF76PI) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КнопкиОзвучкиИЗаписиВидео.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КнопкиОзвучкиИЗаписиВидео.MD)
           - Открытие списка уроков.  [(Видео)](https://youtu.be/eSrkrtMWQQ0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КнопкаОткрытияСпискаУроков.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КнопкаОткрытияСпискаУроков.MD)
           - Работа с буфером обмена.  [(Видео)](https://youtu.be/MdOuXYy0izQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КнопкиРаботаСБуферомОбмена.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КнопкиРаботаСБуферомОбмена.MD)
           - Работа с изменениями в тексте.  [(Видео)](https://youtu.be/2GpSitN0Qh4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КнопкиВернутьОтменитьИзменения.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КнопкиВернутьОтменитьИзменения.MD)
           - Свернуть шаги.  [(Видео)](https://youtu.be/NkHac4LuPOQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КнопкиСвернутьШаги.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КнопкиСвернутьШаги.MD)
           - Поиск и замена в тексте.  [(Видео)](https://youtu.be/0_7Dn1pLjbA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КнопкиПоискаИЗамены.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КнопкиПоискаИЗамены.MD)
           - Очистить раскраску строк.  [(Видео)](https://youtu.be/roHcXxQTb5A) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КнопкаОчиститьРаскраскуСтрок.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КнопкаОчиститьРаскраскуСтрок.MD)
           - Точки останова.  [(Видео)](https://youtu.be/YTL73NYtY2o) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КнопкиРаботаСТочкамиОстанова.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КнопкиРаботаСТочкамиОстанова.MD)
           - Переход к следующей ошибке при выполнении сценариев.  [(Видео)](https://youtu.be/guo2mCF_rC0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КнопкаПереходКСледующейОшибке.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КнопкаПереходКСледующейОшибке.MD)
           - Подключение клиента тестирования и запись действий.  [(Видео)](https://youtu.be/9TaOO4BLOx4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КнопкиПодключениеКлиентаТестированияИЗаписьДействий.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КнопкиПодключениеКлиентаТестированияИЗаписьДействий.MD)
           - Изменение масштаба в редакторе. Смена темы.  [(Видео)](https://youtu.be/V7F5i9IOCDs) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КнопкиМасштабаИСменыТемы.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КнопкиМасштабаИСменыТемы.MD)
           - Комментирование строк. Обрамление вертикальной чертой.  [(Видео)](https://youtu.be/_Nd4Iob4-8Q) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КнопкиОбработкиВыделенныхСтрок.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КнопкиОбработкиВыделенныхСтрок.MD)
           - Перевод сценария на другой язык.  [(Видео)](https://youtu.be/g_tHgb5kGs8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КнопкаПеревестиСценарий.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КнопкаПеревестиСценарий.MD)
   2. ***Закладка "Генератор EPF"***
       - Настройки, при создании новых шагов  [(Видео)](https://youtu.be/pVNBclEq6oY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/НастройкиПриСозданииНовыхШагов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/НастройкиПриСозданииНовыхШагов.MD)
   3. ***Закладка "Библиотеки"***
       - Настройки при работе с библиотеками  [(Видео)](https://youtu.be/Qi9H8wYYsj8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/НастройкиПриРаботеСБиблиотеками.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/НастройкиПриРаботеСБиблиотеками.MD)
   4. ***Закладка "Работа с UI"***
       - Устарело
   5. ***Закладка "Клиенты тестирования"***
       - Как устроена таблица клиентов тестирования.  [(Видео)](https://youtu.be/usXLvg2px2M) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КакУстроенаТаблицаКлиентовТестированияВводная.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КакУстроенаТаблицаКлиентовТестированияВводная.MD)
       - Имя, Синоним, Тип клиента  [(Видео)](https://youtu.be/iO4tEm9Zw2w) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КакУстроенаТаблицаКлиентовТестированияКолонкиЧасть1.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КакУстроенаТаблицаКлиентовТестированияКолонкиЧасть1.MD)
       - Путь к инфобазе, Доп параметры  [(Видео)](https://youtu.be/Ww5Z_9TWYqA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КакУстроенаТаблицаКлиентовТестированияКолонкиЧасть2.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КакУстроенаТаблицаКлиентовТестированияКолонкиЧасть2.MD)
       - Имя компьютера, Порт, Тонкий и Толстый клиент  [(Видео)](https://youtu.be/yxqQ0Q0HQhQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КакУстроенаТаблицаКлиентовТестированияКолонкиЧасть3.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КакУстроенаТаблицаКлиентовТестированияКолонкиЧасть3.MD)
       - Имя компьютера, Порт (1538 и 1541), Web клиент  [(Видео)](https://youtu.be/Zk-Q89QuujU) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/КакУстроенаТаблицаКлиентовТестированияКолонкиЧасть4.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/КакУстроенаТаблицаКлиентовТестированияКолонкиЧасть4.MD)
       - Загрузка списка клиентов тестирования из файла  [(Видео)](https://youtu.be/iYl3FK9askY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗагрузкаСпискаКлиентовТестированияИзФайла.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗагрузкаСпискаКлиентовТестированияИзФайла.MD)
       - Сохранение списка клиентов тестирования в настройках пользователя  [(Видео)](https://youtu.be/ck6sHmgSas8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/СохранениеСпискаКлиентовТестированияВНастройкахПользователя.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/СохранениеСпискаКлиентовТестированияВНастройкахПользователя.MD)
   6. ***Закладка "Сервис"***
       - Основные
           - Отбор по тегам  [(Видео)](https://youtu.be/hhZpH7zsYp4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОсновныеТеги.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОсновныеТеги.MD)
           - Отбор по сценариям  [(Видео)](https://youtu.be/2MZAbbUf98A) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОсновныеОтборПоСценариям.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОсновныеОтборПоСценариям.MD)
           - Язык фича файлов  [(Видео)](https://youtu.be/AcelU5K1coI) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОсновныеЯзыкФичаФайлов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОсновныеЯзыкФичаФайлов.MD)
           - Запись действий пользователя  [(Видео)](https://youtu.be/j5bhhJnsW2U) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОсновныеЗаписьДействийПользователя.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОсновныеЗаписьДействийПользователя.MD)
           - Внешняя компонента VanessaExt  [(Видео)](https://youtu.be/FXW5i56WrOk) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОсновныеВнешняяКомпонентаVanessaExt.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОсновныеВнешняяКомпонентаVanessaExt.MD)
           - Системные каталоги  [(Видео)](https://youtu.be/YJ78WJSZkCE) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОсновныеСистемныеКаталоги.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОсновныеСистемныеКаталоги.MD)
           - Системные настройки  [(Видео)](https://youtu.be/EMoz8lhBYzY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОсновныеСистемныеНастройки.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОсновныеСистемныеНастройки.MD)
           - Прочие настройки  [(Видео)](https://youtu.be/b7chRigOiuA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОсновныеПрочее.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОсновныеПрочее.MD)
           - Сброс настроек  [(Видео)](https://youtu.be/PggLj94ljB4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОсновныеСбросНастроек.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОсновныеСбросНастроек.MD)
       - Настройки клиентов тестирования
           - Запуск клиента тестирования  [(Видео)](https://youtu.be/9ArgE3mE1oY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияЗапускКлиентаТестирования.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияЗапускКлиентаТестирования.MD)
           - Отладка клиента тестирования  [(Видео)](https://youtu.be/ZK9wHXapdk8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияОтладкаКлиентаТестирования.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияОтладкаКлиентаТестирования.MD)
           - Запуск браузера  [(Видео)](https://youtu.be/qflPdMEBCrY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияЗапускБраузера.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияЗапускБраузера.MD)
           - Закрытие клиента тестирования  [(Видео)](https://youtu.be/nU2ZThrTDhk) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияЗакрытиеКлиентаТестирования.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияЗакрытиеКлиентаТестирования.MD)
           - Мобильный клиент  [(Видео)](https://youtu.be/TRck8YURkDQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияМобильныйКлиент.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияМобильныйКлиент.MD)
       - Выполнение сценариев
           - Логирование и оповещение  [(Видео)](https://youtu.be/jQCyBlcJDCw) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисВыполнениеСценариевЛогированиеИОповещение.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисВыполнениеСценариевЛогированиеИОповещение.MD)
           - Скорость выполнения сценариев  [(Видео)](https://youtu.be/Z70Kpf4iZmc) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисВыполнениеСкоростьВыполнения.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисВыполнениеСкоростьВыполнения.MD)
           - При возникновении ошибки  [(Видео)](https://youtu.be/yScyBOJB9_I) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисВыполнениеПриВозникновенииОшибки.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисВыполнениеПриВозникновенииОшибки.MD)
           - Остановить выполнение сценария  [(Видео)](https://youtu.be/jdcP-S4YMZY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисВыполнениеСценариевОстановитьВыполнениеСценария.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисВыполнениеСценариевОстановитьВыполнениеСценария.MD)
           - Обновлять статистику выполнения сценариев  [(Видео)](https://youtu.be/W_8CoHgspXM) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисВыполнениеСценариевОбновлятьСтатистику.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисВыполнениеСценариевОбновлятьСтатистику.MD)
           - Стабилизация выполнения тестов  [(Видео)](https://youtu.be/mHug051xXnc) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисВыполнениеСценариевСтабилизацияВыполненияТестов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисВыполнениеСценариевСтабилизацияВыполненияТестов.MD)
           - Обновление данных в дереве  [(Видео)](https://youtu.be/hqSraTYE1cQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисВыполнениеСценариевОбновлениеДанныхВДереве.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисВыполнениеСценариевОбновлениеДанныхВДереве.MD)
           - Статусы сценариев  [(Видео)](https://youtu.be/utDHye9brH0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисВыполнениеСценариевСтатусыСценариев.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисВыполнениеСценариевСтатусыСценариев.MD)
           - Прочие настройки выполнения сценариев  [(Видео)](https://youtu.be/MGDY_JkIpSI) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисВыполнениеСценариевПрочее.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисВыполнениеСценариевПрочее.MD)
       - Скриншоты
           - Настройки снятия скриншотов.  [(Видео)](https://youtu.be/_WaKGyR443A) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисСкриншоты.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисСкриншоты.MD)
       - Отчеты о запуске сценариев
           - Общие  [(Видео)](https://youtu.be/wqp6m_nVki4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевОбщие.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевОбщие.MD)
           - Видеозапись прохождения тестов  [(Видео)](https://youtu.be/ehm73i11fr4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевВидеозапись.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевВидеозапись.MD)
           - Запись событий выполнения сценариев в файл или консоль  [(Видео)](https://youtu.be/QN5IMQBm0P8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевЛог.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевЛог.MD)
           - Отчет в формате Allure
              - Основные настройки  [(Видео)](https://youtu.be/iwNJS8aJMkA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевAllureОсновные.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевAllureОсновные.MD)
              - Приложения к отчету  [(Видео)](https://youtu.be/8funstz4gkA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевAllureПриложения.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевAllureПриложения.MD)
              - Данные Allure меток  [(Видео)](https://youtu.be/fJFmWYV19Qg) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевAllureМетки.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевAllureМетки.MD)
           - Отчет в формате jUnit  [(Видео)](https://youtu.be/Jsp6QtAFrns) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевjUnit.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевjUnit.MD)
           - Отчет в формате СППР  [(Видео)](https://youtu.be/4bB-BEMp3n8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевСППР.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевСППР.MD)
           - Отчет в формате Cucumber  [(Видео)](https://youtu.be/914d36HZtZY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевCucumber.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевCucumber.MD)
           - Отчет в формате Json  [(Видео)](https://youtu.be/59PbkK2qY20) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевJson.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевJson.MD)
           - Отчет во внутреннем формате  [(Видео)](https://youtu.be/XDpnFlT1kp4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевВнутреннийФормат.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевВнутреннийФормат.MD)
       - Автоинструкции
           - UI Automation  [(Видео)](https://youtu.be/5LSHhBg-CTQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииUIAutomation.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисАвтоинструкцииUIAutomation.MD)
           - Работа с браузером  [(Видео)](https://youtu.be/Zk89F9qRL2k) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииРаботаСБраузером.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисАвтоинструкцииРаботаСБраузером.MD)
           - Поиск картинок  [(Видео)](https://youtu.be/NaNn45M-DEA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииПоискКартинок.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисАвтоинструкцииПоискКартинок.MD)
           - Эмуляция клавиатуры  [(Видео)](https://youtu.be/oqDOmdQtzc8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииЭмуляцияКлавиатуры.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисАвтоинструкцииЭмуляцияКлавиатуры.MD)
           - Эмуляция мышки  [(Видео)](https://youtu.be/v9SR9RV0yv4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииЭмуляцияМышки.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисАвтоинструкцииЭмуляцияМышки.MD)
           - HTML и Markdown  [(Видео)](https://youtu.be/sGM7KwrcU8Q) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииHTMLИMarkdown.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисАвтоинструкцииHTMLИMarkdown.MD)
           - Аудио
              - Общие  [(Видео)](https://youtu.be/-L1nUPy0vGg) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииАудиоОбщие.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисАвтоинструкцииАудиоОбщие.MD)
              - Озвучивание диктором  [(Видео)](https://youtu.be/Y9eKepewj7w) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииАудиоОзвучиваниеДиктором.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисАвтоинструкцииАудиоОзвучиваниеДиктором.MD)
              - Кэш аудио  [(Видео)](https://youtu.be/gsc_j1e4Zqc) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииАудиоКэшАудио.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисАвтоинструкцииАудиоКэшАудио.MD)
              - Словари замен  [(Видео)](https://youtu.be/GjFu0RxAy18) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииАудиоСловариЗамен.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисАвтоинструкцииАудиоСловариЗамен.MD)
           - Видео  [(Видео)](https://youtu.be/uD3DMbl6Z0o) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииВидео.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисАвтоинструкцииВидео.MD)
       - Прочее
           - Vanessa Editor  [(Видео)](https://youtu.be/MYeyI_4MPTY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисVanessaEditor.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисVanessaEditor.MD)
           - Обучение  [(Видео)](https://youtu.be/gyF8YFMm2gI) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисОбучение.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисОбучение.MD)
           - Закладка прочее  [(Видео)](https://youtu.be/pX-mkRaOoPg) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава02/ЗакладкаСервисПрочее.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава02/ЗакладкаСервисПрочее.MD)
           

### Глава 3. Синтаксис языка Gherkin

   1. Как устроен feature файл? Секции фича файла.
       1. Что такое язык Gherkin?  [(Видео)](https://youtu.be/X7CcUZVdOVA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/ЧтоТакоеЯзыкGherkin.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/ЧтоТакоеЯзыкGherkin.MD)
       1. Заголовок фичи.  [(Видео)](https://youtu.be/6aPr9EVP0Us) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/КакУстроенFeatureФайлЗаголовокФичи.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/КакУстроенFeatureФайлЗаголовокФичи.MD)
       1. Секция "Контекст".  [(Видео)](https://youtu.be/JcyTU93MVWM) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/КакУстроенFeatureФайлСекцияКонтекст.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/КакУстроенFeatureФайлСекцияКонтекст.MD)
       1. Секция "Сценарий".  [(Видео)](https://youtu.be/HIQX2QY5ECA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/КакУстроенFeatureФайлСекцияСценария.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/КакУстроенFeatureФайлСекцияСценария.MD)
       1. Секция "Структура сценария".  [(Видео)](https://youtu.be/Yu7xIA7zx6A) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/КакУстроенFeatureФайлСекцияСтруктураСценария.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/КакУстроенFeatureФайлСекцияСтруктураСценария.MD)
       1. Секция "Переменные".
           - Простые переменные.  [(Видео)](https://youtu.be/fajaBnTUu70) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/КакУстроенFeatureФайлСекцияПеременныеПростые.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/КакУстроенFeatureФайлСекцияПеременныеПростые.MD)
           - Табличные переменные.  [(Видео)](https://youtu.be/eBk9Ee076us) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/КакУстроенFeatureФайлСекцияПеременныеТабличные.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/КакУстроенFeatureФайлСекцияПеременныеТабличные.MD)

   1. Как устроены шаги сценариев.
       1. Ключевые слова шагов.  [(Видео)](https://youtu.be/dV1X3uMsPhE) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/КлючевыеСловаШагов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/КлючевыеСловаШагов.MD)
       1. Параметры шагов.  [(Видео)](https://youtu.be/Qj8R3v2sX1Y) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/ПараметрыШагов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/ПараметрыШагов.MD)
       1. Снипеты шагов. Сообщение: "Не найдена процедура или функция для выполнения шага"  [(Видео)](https://youtu.be/JxVmxKGIRVE) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/СнипетыШагов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/СнипетыШагов.MD)
       1. Спецсимволы в шагах сценариев.  [(Видео)](https://youtu.be/W6rKHBWxXXI) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/СпецсимволыВШагахСценариев.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/СпецсимволыВШагахСценариев.MD)
       1. Условия.  [(Видео)](https://youtu.be/7UJTZjbbKIA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/УсловияВСценариях.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/УсловияВСценариях.MD)
       1. Циклы.  [(Видео)](https://youtu.be/YbHCyQbxZk0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/ЦиклыВСценариях.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/ЦиклыВСценариях.MD)
       1. Попытка/Исключение.  [(Видео)](https://youtu.be/vYzMWNJP7sk) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/ПопыткаИсключение.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/ПопыткаИсключение.MD)

   1. Группы шагов в сценарии.
       1. Как работают группы шагов. Тэг @tree.  [(Видео)](https://youtu.be/9ZLFJ9kn4fY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/ГруппыШагов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/ГруппыШагов.MD)
   
   1. Подсценарии.
       1. Подсценарии. Тэг @exportscenarios. Передача параметров в подсценарии.  [(Видео)](https://youtu.be/NqauOaTrpC4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/ПодсценарииЧастьОдин.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/ПодсценарииЧастьОдин.MD)
       1. Передача таблиц в подсценарии.  [(Видео)](https://youtu.be/RlFRnFhvolI) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/ПередачаТаблицВПодсценарии.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/ПередачаТаблицВПодсценарии.MD)
       1. Передача многострочных строк в подсценарии.  [(Видео)](https://youtu.be/5QZ9a6fBfK0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/ПередачаМногострочныхСтрокВПодсценарии.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/ПередачаМногострочныхСтрокВПодсценарии.MD)


### Глава 4. Библиотека доступных шагов
   1. Работа с деревом известных шагов. Поиск.  [(Видео)](https://youtu.be/MwKTISksxTg) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава04/ОсновнаяИнформацияПоДеревуИзвестныхШагов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава04/ОсновнаяИнформацияПоДеревуИзвестныхШагов.MD)
   1. Дерево шагов с поддержкой других языков.  [(Видео)](https://youtu.be/lVbtg_BeSuE) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава04/ДеревоШаговДругиеЯзыки.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава04/ДеревоШаговДругиеЯзыки.MD)

### Глава 5. Исследователь формы
   * Как работает исследователь формы.  [(Видео)](https://youtu.be/rS7CsqxgKnE) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава05/КакРаботаетИсследовательФормы.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава05/КакРаботаетИсследовательФормы.MD)

### Глава 6. Переменные.
   1. Простые переменные.
       1. Простой пример использования переменных.  [(Видео)](https://youtu.be/1g651tSJ4fI) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава06/ПростойПримерИспользованияПеременных.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава06/ПростойПримерИспользованияПеременных.MD)
       1. Типы переменных. Как получить текущую дату в переменную.  [(Видео)](https://youtu.be/htX6l4MjhZA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава06/ТипыПеременныхКакПолучитьТекущуюДату.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава06/ТипыПеременныхКакПолучитьТекущуюДату.MD)
       1. Как параметр подсценария поместить в переменную.  [(Видео)](https://youtu.be/sNz49aUUNfI) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава06/КакПараметрПодсценарияПоместитьВПеременную.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава06/КакПараметрПодсценарияПоместитьВПеременную.MD)
       1. Как посмотреть значение переменной. Табло переменных.  [(Видео)](https://youtu.be/XsxhsccK7iw) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава06/КакПосмотретьЗначениеПеременнойТаблоПеременных.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава06/КакПосмотретьЗначениеПеременнойТаблоПеременных.MD)
       1. Использование переменных внутри параметров шагов.  [(Видео)](https://youtu.be/IWDOtjJGNk0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава06/ИспользованиеПеременныхВнутриПараметровШагов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава06/ИспользованиеПеременныхВнутриПараметровШагов.MD)
       1. Особенности передачи переменных в шаги, которые вычисляют выражение.  [(Видео)](https://youtu.be/dZQGnLr1iSY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава06/ОсобенностиПередачиПеременныхВШагиКоторыеВычисляютВыражение.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава06/ОсобенностиПередачиПеременныхВШагиКоторыеВычисляютВыражение.MD)
       1. Зарезервированные имена переменных КаталогПроекта, КаталогИнструментов, КаталогФичи.  [(Видео)](https://youtu.be/nn_XATqifM0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава06/ЗарезервированныеИменаПеременных.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава06/ЗарезервированныеИменаПеременных.MD)
       1. Создание переменных кодом.  [(Видео)](https://youtu.be/RSz8BuuaztI) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава06/СозданиеПеременныхКодом.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава06/СозданиеПеременныхКодом.MD)
       1. Как использовать переменную для вычисления выражения на сервере.  [(Видео)](https://youtu.be/uEbw2D1gSuU) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава06/КакИспользоватьПеременнуюДляВычисленияНаСервере.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава06/КакИспользоватьПеременнуюДляВычисленияНаСервере.MD)
   1. Секция "Переменные".
        - Простые переменные.  [(Видео)](https://youtu.be/fajaBnTUu70) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/КакУстроенFeatureФайлСекцияПеременныеПростые.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/КакУстроенFeatureФайлСекцияПеременныеПростые.MD)
        - Табличные переменные.  [(Видео)](https://youtu.be/eBk9Ee076us) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава03/КакУстроенFeatureФайлСекцияПеременныеТабличные.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава03/КакУстроенFeatureФайлСекцияПеременныеТабличные.MD)

### Глава 7. Создание тестовых данных
   * Обзор.  [(Видео)](https://youtu.be/Mf4PRkkxBZc) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава07/СозданиеТестовыхДанныхОбзор.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава07/СозданиеТестовыхДанныхОбзор.MD)

### Глава 8. Приёмы работы
   1. Как проверить равенство табличного документа эталону.  [(Видео)](https://youtu.be/OrAXq7BrTxk) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава08/ПроверитьРавенствоТабличногоДокументаЭталону.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава08/ПроверитьРавенствоТабличногоДокументаЭталону.MD)
   1. Как в сценарии выполнить код на языке 1С.  [(Видео)](https://youtu.be/mRYFskDvBRE) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава08/КакВСценарииВыполнитьКодНаЯзыке1С.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава08/КакВСценарииВыполнитьКодНаЯзыке1С.MD)
   1. Выбор файла из диалога выбора файлов.  [(Видео)](https://youtu.be/CWQ5JiOkxoM) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава08/ВыборФайлаИзДиалогаВыбораФайлов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава08/ВыборФайлаИзДиалогаВыбораФайлов.MD)
   1. Как запомнить в переменную выражение на встроенном языке 1С.  [(Видео)](https://youtu.be/Wy1-Ux7t8hQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава08/КакЗапомнитьВПеременнуюВыражениеНаВстроенномЯзыке.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава08/КакЗапомнитьВПеременнуюВыражениеНаВстроенномЯзыке.MD)
   1. Как изменить настройки Vanessa Automation во время выполнения сценария.  [(Видео)](https://youtu.be/oWnWqhI0kYE) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава08/КакИзменитьНастройкиVanessaAutomationВСценарии.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава08/КакИзменитьНастройкиVanessaAutomationВСценарии.MD)
   1. Как правильно проверить видимость/доступность кнопки, элемента или пункта меню.  [(Видео)](https://youtu.be/cLV0tUjOkrw) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава08/КакПравильноПроверитьДоступностьКнопкиПоля.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава08/КакПравильноПроверитьДоступностьКнопкиПоля.MD)
   1. Как программно записать элемент а потом открыть его навигационную ссылку.  [(Видео)](https://youtu.be/qySlBc64TBQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава08/КакПрограммноЗаписатьЭлементАПотомОткрытьЕгоНавигационнуюСсылку.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава08/КакПрограммноЗаписатьЭлементАПотомОткрытьЕгоНавигационнуюСсылку.MD)
   1. Как закрыть браузер после окончания выполнения тестов.  [(Видео)](https://youtu.be/3ot5_kiHJr0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава08/КакЗакрытьБраузерПослеОкончанияВыполненияТестов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава08/КакЗакрытьБраузерПослеОкончанияВыполненияТестов.MD)
   1. Особенности шагов при работе с переключателями, гиперссылками и полями.  [(Видео)](https://youtu.be/UBnMv1bpLxY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава08/ОсобенностиШаговПриВыбореЗначенияПоНомеру.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава08/ОсобенностиШаговПриВыбореЗначенияПоНомеру.MD)
   1. Сравнить текст фича файла с другим файлом.  [(Видео)](https://youtu.be/fhFcFpq27pg) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава08/СравнитьТекстФичаФайлаСДругимФайлом.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава08/СравнитьТекстФичаФайлаСДругимФайлом.MD)
   1. Как понять, что изменилось в форме.
   1. Расследование причин падения тестов. Как сравнить состояние формы упавшего теста с текущим состоянием.
   1. Как проверить состояние формы
   
### Глава 9. Allure. Отчет о запуске тестов в формате Allure
   * Отчет о выполнении сценариев в формате Allure.  [(Видео)](https://youtu.be/LHzYsyCbUMU) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава09/ОтчетОВыполненииСценариевВФорматеAllure.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава09/ОтчетОВыполненииСценариевВФорматеAllure.MD)

### Глава 10. Автоинструкции/Автодокументация
   * Обзор возможностей.  [(Видео)](https://youtu.be/Ji-cdbkKrB4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава10/АвтоинструкцииОбзорВозможностей.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава10/АвтоинструкцииОбзорВозможностей.MD)

### Глава 11. UI Automation
   1. Шаги для работы с UI Automation.  [(Видео)](https://youtu.be/ZDH-lmyUqFI) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава11/ШагиДляРаботыСUIAutomation.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава11/ШагиДляРаботыСUIAutomation.MD)
   1. Как закрыть сеанс 1С в обычных формах с помощью UI Automation.  [(Видео)](https://youtu.be/u6xK33BfYZM) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава11/ЗакрытьСеанс1СВОбычныхФормахUIAutomation.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава11/ЗакрытьСеанс1СВОбычныхФормахUIAutomation.MD)
   1. Как открыть окно "О программе" и получить из него данные лицензий.  [(Видео)](https://youtu.be/0Xn7BRJYolo) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава11/КакОткрытьОкноОПрограммеИПолучитьДанныеЛицензий.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава11/КакОткрытьОкноОПрограммеИПолучитьДанныеЛицензий.MD)
   1. Как открыть окно "Все функции" с помощью UI Automation.  [(Видео)](https://youtu.be/fPD8PB9eL1g) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава11/КакОткрытьОкноВсеФункцииСПомощьюUIAutomation.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава11/КакОткрытьОкноВсеФункцииСПомощьюUIAutomation.MD)

### Глава 12. Расширение VAExtension
   * Описание работы с расширением VAExtension.  [(Видео)](https://youtu.be/uhEsB59L4No) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава12/ОписаниеРаботыСРасширениемVAExtension.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава12/ОписаниеРаботыСРасширениемVAExtension.MD)

### Глава 13. Редактор сценариев VAEditor
   1. Контекстное меню редактора.
        - Подбор шагов.  [(Видео)](https://youtu.be/nwycRQpNL9Q) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава13/КонтекстноеМенюРедактораПодборШагов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава13/КонтекстноеМенюРедактораПодборШагов.MD)
        - Выполнение сценария.  [(Видео)](https://youtu.be/Iute0RzZUfk) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава13/КонтекстноеМенюРедактораВыполнениеСценария.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава13/КонтекстноеМенюРедактораВыполнениеСценария.MD)
        - Открытие файлов.  [(Видео)](https://youtu.be/Xgg7dTUdsnI) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава13/КонтекстноеМенюРедактораОткрытиеФайлов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава13/КонтекстноеМенюРедактораОткрытиеФайлов.MD)
        - Точки останова.  [(Видео)](https://youtu.be/iUvOs7f-UrE) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава13/КонтекстноеМенюРедактораТочкиОстанова.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава13/КонтекстноеМенюРедактораТочкиОстанова.MD)
        - Редактор таблиц Gherkin.  [(Видео)](https://youtu.be/TtMqiFRGAos) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава13/КонтекстноеМенюРедактораРедакторТаблицGherkin.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава13/КонтекстноеМенюРедактораРедакторТаблицGherkin.MD)
        - Получить макет по таблице Gherkin.  [(Видео)](https://youtu.be/5oqqcwcwSWQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава13/КонтекстноеМенюРедактораПолучитьМакетПоТаблицеGherkin.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава13/КонтекстноеМенюРедактораПолучитьМакетПоТаблицеGherkin.MD)
        - Получить шаги по данным клиента тестирования.  [(Видео)](https://youtu.be/GogY0VBqE1M) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава13/КонтекстноеМенюРедактораПолучитьШагиПоДаннымКлиентаТестирования.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава13/КонтекстноеМенюРедактораПолучитьШагиПоДаннымКлиентаТестирования.MD)
        - Перейти к следующей строке с ошибкой.  [(Видео)](https://youtu.be/RsdcUWRiK0U) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава13/КонтекстноеМенюРедактораПерейтиКСледующейСтрокеСОшибкой.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава13/КонтекстноеМенюРедактораПерейтиКСледующейСтрокеСОшибкой.MD)
        - Контекстное меню Monaco.  [(Видео)](https://youtu.be/0yUru03Ar68) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава13/КонтекстноеМенюРедактораКонтекстноеМенюMonaco.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава13/КонтекстноеМенюРедактораКонтекстноеМенюMonaco.MD)
   1. Прочее.
        - Горячие клавиши редактора.  [(Видео)](https://youtu.be/Us-aOTueiTE) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.040.1/PDF/Глава08/ГорячиеКлавишиРедактора.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MD/MainHelp/1.2.040.1/Глава08/ГорячиеКлавишиРедактора.MD)
