docs/MainHelp/1.2.041.1/index.MD
## Список уроков
---
### Глава 0. Как сделать, чтобы интерактивная справка работала
   1. [Инструкция: что нужно для работы интерактивных уроков.](https://github.com/Pr-Mex/vanessa-automation/blob/develop/docs/InteractiveHelp/SettingUpInteractiveHelp.md)
   1. Что нужно, чтобы интерактивная справка работала?  [(Видео)](https://youtu.be/COJ_wptCcXY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава00/ЧтоНужноЧтобыИнтерактивнаяСправкаРаботала.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава00/ЧтоНужноЧтобыИнтерактивнаяСправкаРаботала.MD)


### Глава 1. Знакомство с Vanessa Automation
   1. Что такое Vanessa Automation?  [(Видео)](https://youtu.be/MZHZ887M9gg) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава01/ЧтоТакоеVanessaAutomation.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава01/ЧтоТакоеVanessaAutomation.MD)
   1. Основные элементы формы.  [(Видео)](https://youtu.be/NcJKnCDCmhM) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава01/ЗнакомствоСVanessaAutomationОсновныеЭлементыФормы.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава01/ЗнакомствоСVanessaAutomationОсновныеЭлементыФормы.MD)

### Глава 2. Настройки.
   1. ***Закладка "Запуск сценариев"***
       - Основные элементы закладки "Запуск сценариев"  [(Видео)](https://youtu.be/gsXF0ic5SU4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ОсновныеЭлементыЗакладкиЗапускСценариев.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ОсновныеЭлементыЗакладкиЗапускСценариев.MD)
       - Панель инструментов редактора
           - Краткий обзор доступных инструментов при работе с редактором (гаечный ключ)  [(Видео)](https://youtu.be/qbSeYiZGHkI) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КраткийОбзорДоступныхИнструментовПриРаботеСРедактором.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КраткийОбзорДоступныхИнструментовПриРаботеСРедактором.MD)
           - Панель "Дерево каталогов"  [(Видео)](https://youtu.be/D-NQwG7MLN4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ОписаниеПанелиДеревоКаталогов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ОписаниеПанелиДеревоКаталогов.MD)
           - Панель "Работа с git"  [(Видео)](https://youtu.be/oIq8pTAZMBE) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ОписаниеПанелиРаботаСGit.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ОписаниеПанелиРаботаСGit.MD)
           - Настройки, доступные при работе с редактором (шестеренка)
              - Сохранение и загрузка настроек Vanessa Automation  [(Видео)](https://youtu.be/wnFZiEkNHT8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/НастройкиВПанелиРедактораСохранитьЗагрузитьНастройки.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/НастройкиВПанелиРедактораСохранитьЗагрузитьНастройки.MD)
              - Другие настройки  [(Видео)](https://youtu.be/UZ6SY7J0ghg) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/НастройкиВПанелиРедактораДругиеНастройки.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/НастройкиВПанелиРедактораДругиеНастройки.MD)
           - Кнопки создания, сохранения и запуска сценариев. Часть1  [(Видео)](https://youtu.be/hAlKitldmDY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КнопкиЗапускаСценариевЧастьОдин.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КнопкиЗапускаСценариевЧастьОдин.MD)
           - Кнопки создания, сохранения и запуска сценариев. Часть2  [(Видео)](https://youtu.be/3wXBP8hAcis) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КнопкиЗапускаСценариевЧастьДва.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КнопкиЗапускаСценариевЧастьДва.MD)
           - Управление озвучкой сценария и записью видео.  [(Видео)](https://youtu.be/yg_QhcXM1pQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КнопкиОзвучкиИЗаписиВидео.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КнопкиОзвучкиИЗаписиВидео.MD)
           - Открытие списка уроков.  [(Видео)](https://youtu.be/mtoYF2Lev1M) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КнопкаОткрытияСпискаУроков.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КнопкаОткрытияСпискаУроков.MD)
           - Работа с буфером обмена.  [(Видео)](https://youtu.be/euCSD-pOMo8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КнопкиРаботаСБуферомОбмена.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КнопкиРаботаСБуферомОбмена.MD)
           - Работа с изменениями в тексте.  [(Видео)](https://youtu.be/SaFRtHU5W-c) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КнопкиВернутьОтменитьИзменения.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КнопкиВернутьОтменитьИзменения.MD)
           - Свернуть шаги.  [(Видео)](https://youtu.be/EPvmg0nAC2Q) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КнопкиСвернутьШаги.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КнопкиСвернутьШаги.MD)
           - Поиск и замена в тексте.  [(Видео)](https://youtu.be/4mJ4g-SOwS8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КнопкиПоискаИЗамены.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КнопкиПоискаИЗамены.MD)
           - Очистить раскраску строк.  [(Видео)](https://youtu.be/TXUyiZcGwrs) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КнопкаОчиститьРаскраскуСтрок.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КнопкаОчиститьРаскраскуСтрок.MD)
           - Точки останова.  [(Видео)](https://youtu.be/Q12zLNxZn-8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КнопкиРаботаСТочкамиОстанова.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КнопкиРаботаСТочкамиОстанова.MD)
           - Переход к следующей ошибке при выполнении сценариев.  [(Видео)](https://youtu.be/krflxS1rFlM) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КнопкаПереходКСледующейОшибке.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КнопкаПереходКСледующейОшибке.MD)
           - Подключение клиента тестирования и запись действий.  [(Видео)](https://youtu.be/1mtxB6qpAMQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КнопкиПодключениеКлиентаТестированияИЗаписьДействий.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КнопкиПодключениеКлиентаТестированияИЗаписьДействий.MD)
           - Изменение масштаба в редакторе. Смена темы.  [(Видео)](https://youtu.be/6sgUH0vs6o0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КнопкиМасштабаИСменыТемы.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КнопкиМасштабаИСменыТемы.MD)
           - Комментирование строк. Обрамление вертикальной чертой.  [(Видео)](https://youtu.be/5JXMoJIr9Qs) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КнопкиОбработкиВыделенныхСтрок.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КнопкиОбработкиВыделенныхСтрок.MD)
           - Перевод сценария на другой язык.  [(Видео)](https://youtu.be/9uT-vBMuwkQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КнопкаПеревестиСценарий.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КнопкаПеревестиСценарий.MD)
   2. ***Закладка "Генератор EPF"***
       - Настройки, при создании новых шагов  [(Видео)](https://youtu.be/B6O1tLv1P-I) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/НастройкиПриСозданииНовыхШагов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/НастройкиПриСозданииНовыхШагов.MD)
   3. ***Закладка "Библиотеки"***
       - Настройки при работе с библиотеками  [(Видео)](https://youtu.be/KMH1y3ZhBzo) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/НастройкиПриРаботеСБиблиотеками.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/НастройкиПриРаботеСБиблиотеками.MD)
   4. ***Закладка "Работа с UI"***
       - Устарело
   5. ***Закладка "Клиенты тестирования"***
       - Как устроена таблица клиентов тестирования.  [(Видео)](https://youtu.be/G6xnRJIHB_4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КакУстроенаТаблицаКлиентовТестированияВводная.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КакУстроенаТаблицаКлиентовТестированияВводная.MD)
       - Имя, Синоним, Тип клиента  [(Видео)](https://youtu.be/XOt5DUpj_IM) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КакУстроенаТаблицаКлиентовТестированияКолонкиЧасть1.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КакУстроенаТаблицаКлиентовТестированияКолонкиЧасть1.MD)
       - Путь к инфобазе, Доп параметры  [(Видео)](https://youtu.be/4qDx7riP5eg) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КакУстроенаТаблицаКлиентовТестированияКолонкиЧасть2.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КакУстроенаТаблицаКлиентовТестированияКолонкиЧасть2.MD)
       - Имя компьютера, Порт, Тонкий и Толстый клиент  [(Видео)](https://youtu.be/JnA__qKC8rU) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КакУстроенаТаблицаКлиентовТестированияКолонкиЧасть3.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КакУстроенаТаблицаКлиентовТестированияКолонкиЧасть3.MD)
       - Имя компьютера, Порт (1538 и 1541), Web клиент  [(Видео)](https://youtu.be/Fd_-qhT8Xl8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/КакУстроенаТаблицаКлиентовТестированияКолонкиЧасть4.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/КакУстроенаТаблицаКлиентовТестированияКолонкиЧасть4.MD)
       - Загрузка списка клиентов тестирования из файла  [(Видео)](https://youtu.be/7aj5qcYUVXA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗагрузкаСпискаКлиентовТестированияИзФайла.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗагрузкаСпискаКлиентовТестированияИзФайла.MD)
       - Сохранение списка клиентов тестирования в настройках пользователя  [(Видео)](https://youtu.be/ML1BMWZqDmM) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/СохранениеСпискаКлиентовТестированияВНастройкахПользователя.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/СохранениеСпискаКлиентовТестированияВНастройкахПользователя.MD)
   6. ***Закладка "Сервис"***
       - Основные
           - Отбор по тегам  [(Видео)](https://youtu.be/Idg0ubn6MWY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОсновныеТеги.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОсновныеТеги.MD)
           - Отбор по сценариям  [(Видео)](https://youtu.be/77gIBuzN9Yg) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОсновныеОтборПоСценариям.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОсновныеОтборПоСценариям.MD)
           - Язык фича файлов  [(Видео)](https://youtu.be/PS0UxaKpIW8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОсновныеЯзыкФичаФайлов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОсновныеЯзыкФичаФайлов.MD)
           - Запись действий пользователя  [(Видео)](https://youtu.be/FlcXucrrC-w) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОсновныеЗаписьДействийПользователя.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОсновныеЗаписьДействийПользователя.MD)
           - Внешняя компонента VanessaExt  [(Видео)](https://youtu.be/r-Vy33RmYTw) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОсновныеВнешняяКомпонентаVanessaExt.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОсновныеВнешняяКомпонентаVanessaExt.MD)
           - Системные каталоги  [(Видео)](https://youtu.be/zosc-j0Bps8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОсновныеСистемныеКаталоги.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОсновныеСистемныеКаталоги.MD)
           - Дымовые тесты  [(Видео)](https://youtu.be/gKlKUfVpnAE) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОсновныеДымовыеТесты.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОсновныеДымовыеТесты.MD)
           - Системные настройки  [(Видео)](https://youtu.be/XdCGEHfocz0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОсновныеСистемныеНастройки.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОсновныеСистемныеНастройки.MD)
           - Прочие настройки  [(Видео)](https://youtu.be/dHXK5h9pnec) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОсновныеПрочее.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОсновныеПрочее.MD)
           - Сброс настроек  [(Видео)](https://youtu.be/aVBJJm46MSY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОсновныеСбросНастроек.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОсновныеСбросНастроек.MD)
       - Настройки клиентов тестирования
           - Запуск клиента тестирования  [(Видео)](https://youtu.be/tvW0X18rIt8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияЗапускКлиентаТестирования.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияЗапускКлиентаТестирования.MD)
           - Отладка клиента тестирования  [(Видео)](https://youtu.be/WvARTrlLHAs) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияОтладкаКлиентаТестирования.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияОтладкаКлиентаТестирования.MD)
           - Запуск браузера  [(Видео)](https://youtu.be/mFReXOKjJUg) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияЗапускБраузера.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияЗапускБраузера.MD)
           - Закрытие клиента тестирования  [(Видео)](https://youtu.be/GNgchceazU0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияЗакрытиеКлиентаТестирования.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияЗакрытиеКлиентаТестирования.MD)
           - Мобильный клиент  [(Видео)](https://youtu.be/BFMbktZwRMY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияМобильныйКлиент.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисНастройкиКлиентовТестированияМобильныйКлиент.MD)
       - Выполнение сценариев
           - Логирование и оповещение  [(Видео)](https://youtu.be/Ky_T5C5Ue9o) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисВыполнениеСценариевЛогированиеИОповещение.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисВыполнениеСценариевЛогированиеИОповещение.MD)
           - Скорость выполнения сценариев  [(Видео)](https://youtu.be/bB2mV73IMxA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисВыполнениеСкоростьВыполнения.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисВыполнениеСкоростьВыполнения.MD)
           - При возникновении ошибки  [(Видео)](https://youtu.be/ZlOpzTJsZxo) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисВыполнениеПриВозникновенииОшибки.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисВыполнениеПриВозникновенииОшибки.MD)
           - Остановить выполнение сценария  [(Видео)](https://youtu.be/oHCzuNCVxUY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисВыполнениеСценариевОстановитьВыполнениеСценария.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисВыполнениеСценариевОстановитьВыполнениеСценария.MD)
           - Обновлять статистику выполнения сценариев  [(Видео)](https://youtu.be/2walDhfHs1s) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисВыполнениеСценариевОбновлятьСтатистику.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисВыполнениеСценариевОбновлятьСтатистику.MD)
           - Стабилизация выполнения тестов  [(Видео)](https://youtu.be/t1O7J92r5GY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисВыполнениеСценариевСтабилизацияВыполненияТестов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисВыполнениеСценариевСтабилизацияВыполненияТестов.MD)
           - Обновление данных в дереве  [(Видео)](https://youtu.be/PL6uHNJrk5E) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисВыполнениеСценариевОбновлениеДанныхВДереве.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисВыполнениеСценариевОбновлениеДанныхВДереве.MD)
           - Статусы сценариев  [(Видео)](https://youtu.be/jR7XCEAx_nU) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисВыполнениеСценариевСтатусыСценариев.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисВыполнениеСценариевСтатусыСценариев.MD)
           - Прочие настройки выполнения сценариев  [(Видео)](https://youtu.be/h60fO7-Syvg) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисВыполнениеСценариевПрочее.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисВыполнениеСценариевПрочее.MD)
       - Скриншоты
           - Настройки снятия скриншотов.  [(Видео)](https://youtu.be/V_Od2vksI7k) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисСкриншоты.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисСкриншоты.MD)
       - Отчеты о запуске сценариев
           - Общие  [(Видео)](https://youtu.be/llMde0c6Vko) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевОбщие.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевОбщие.MD)
           - Видеозапись прохождения тестов  [(Видео)](https://youtu.be/eATKkoBPPPk) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевВидеозапись.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевВидеозапись.MD)
           - Запись событий выполнения сценариев в файл или консоль  [(Видео)](https://youtu.be/UHrbOMLe_3E) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевЛог.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевЛог.MD)
           - Отчет в формате Allure
              - Основные настройки  [(Видео)](https://youtu.be/pzA-6g_VGYc) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевAllureОсновные.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевAllureОсновные.MD)
              - Приложения к отчету  [(Видео)](https://youtu.be/AgOdWm-FV4Q) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевAllureПриложения.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевAllureПриложения.MD)
              - Данные Allure меток  [(Видео)](https://youtu.be/sqh-HJEB-28) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевAllureМетки.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевAllureМетки.MD)
           - Отчет в формате jUnit  [(Видео)](https://youtu.be/Ljh8yNlA4RU) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевjUnit.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевjUnit.MD)
           - Отчет в формате СППР  [(Видео)](https://youtu.be/baciHO9bbK0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевСППР.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевСППР.MD)
           - Отчет в формате Cucumber  [(Видео)](https://youtu.be/LO140y9eTB0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевCucumber.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевCucumber.MD)
           - Отчет в формате Json  [(Видео)](https://youtu.be/5svn7YzEDPs) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевJson.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевJson.MD)
           - Отчет во внутреннем формате  [(Видео)](https://youtu.be/naW1VgdQTG8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевВнутреннийФормат.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОтчетыОЗапускеСценариевВнутреннийФормат.MD)
       - Автоинструкции
           - UI Automation  [(Видео)](https://youtu.be/wh8SN5trUkg) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииUIAutomation.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисАвтоинструкцииUIAutomation.MD)
           - Работа с браузером  [(Видео)](https://youtu.be/O9rH2gCwWwI) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииРаботаСБраузером.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисАвтоинструкцииРаботаСБраузером.MD)
           - Поиск картинок  [(Видео)](https://youtu.be/Qsa0kVUpEDM) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииПоискКартинок.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисАвтоинструкцииПоискКартинок.MD)
           - Эмуляция клавиатуры  [(Видео)](https://youtu.be/SeA93iTS-V8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииЭмуляцияКлавиатуры.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисАвтоинструкцииЭмуляцияКлавиатуры.MD)
           - Эмуляция мышки  [(Видео)](https://youtu.be/giUJmEwcfLM) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииЭмуляцияМышки.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисАвтоинструкцииЭмуляцияМышки.MD)
           - HTML и Markdown  [(Видео)](https://youtu.be/DzOIRqyjtFQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииHTMLИMarkdown.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисАвтоинструкцииHTMLИMarkdown.MD)
           - Аудио
              - Общие  [(Видео)](https://youtu.be/wSlrmRFQcmM) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииАудиоОбщие.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисАвтоинструкцииАудиоОбщие.MD)
              - Озвучивание диктором  [(Видео)](https://youtu.be/-fm5f3heOTA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииАудиоОзвучиваниеДиктором.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисАвтоинструкцииАудиоОзвучиваниеДиктором.MD)
              - Кэш аудио  [(Видео)](https://youtu.be/eGJ2quPcUHY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииАудиоКэшАудио.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисАвтоинструкцииАудиоКэшАудио.MD)
              - Словари замен  [(Видео)](https://youtu.be/m5uqzurNMVQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииАудиоСловариЗамен.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисАвтоинструкцииАудиоСловариЗамен.MD)
           - Видео  [(Видео)](https://youtu.be/O9kPev3sAIM) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисАвтоинструкцииВидео.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисАвтоинструкцииВидео.MD)
       - Прочее
           - Vanessa Editor  [(Видео)](https://youtu.be/VhE6O-uUwmA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисVanessaEditor.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисVanessaEditor.MD)
           - Обучение  [(Видео)](https://youtu.be/KCopPB-DYRE) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисОбучение.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисОбучение.MD)
           - Закладка прочее  [(Видео)](https://youtu.be/feu8xytY4KA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/ЗакладкаСервисПрочее.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/ЗакладкаСервисПрочее.MD)
   7. ***Рекомендуемые настройки при первом запуске***
       - Рекомендуемые настройки при первом запуске Vanessa Automation.  [(Видео)](https://youtu.be/doYC151jo-w) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава02/РекомендуемыеНастройкиПриПервомЗапуске.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава02/РекомендуемыеНастройкиПриПервомЗапуске.MD)
           

### Глава 3. Синтаксис языка Gherkin

   1. Как устроен feature файл? Секции фича файла.
       1. Что такое язык Gherkin?  [(Видео)](https://youtu.be/34LfIOiZ1X4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/ЧтоТакоеЯзыкGherkin.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/ЧтоТакоеЯзыкGherkin.MD)
       1. Заголовок фичи.  [(Видео)](https://youtu.be/pNSyLYhmlQg) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/КакУстроенFeatureФайлЗаголовокФичи.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/КакУстроенFeatureФайлЗаголовокФичи.MD)
       1. Секция "Контекст".  [(Видео)](https://youtu.be/UJdXz-RFLjg) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/КакУстроенFeatureФайлСекцияКонтекст.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/КакУстроенFeatureФайлСекцияКонтекст.MD)
       1. Секция "Сценарий".  [(Видео)](https://youtu.be/IjWuqPPErZ4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/КакУстроенFeatureФайлСекцияСценария.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/КакУстроенFeatureФайлСекцияСценария.MD)
       1. Особенности создания имен сценариев.  [(Видео)](https://youtu.be/pmP6DXlvWLk) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/ПравилаСозданияИменСценариев.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/ПравилаСозданияИменСценариев.MD)
       1. Секция "Структура сценария".  [(Видео)](https://youtu.be/UoROEVZMUAI) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/КакУстроенFeatureФайлСекцияСтруктураСценария.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/КакУстроенFeatureФайлСекцияСтруктураСценария.MD)
       1. Секция "Переменные".
           - Простые переменные.  [(Видео)](https://youtu.be/L_LbssynWos) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/КакУстроенFeatureФайлСекцияПеременныеПростые.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/КакУстроенFeatureФайлСекцияПеременныеПростые.MD)
           - Табличные переменные.  [(Видео)](https://youtu.be/Fxi-UAcg04c) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/КакУстроенFeatureФайлСекцияПеременныеТабличные.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/КакУстроенFeatureФайлСекцияПеременныеТабличные.MD)
           - Импорт переменных из других файлов.  [(Видео)](https://youtu.be/_8h-xfnf-D0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/ИмпортПеременныхИзДругихФайлов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/ИмпортПеременныхИзДругихФайлов.MD)

   1. Как устроены шаги сценариев.
       1. Ключевые слова шагов.  [(Видео)](https://youtu.be/HaP0fjCrapk) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/КлючевыеСловаШагов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/КлючевыеСловаШагов.MD)
       1. Параметры шагов.  [(Видео)](https://youtu.be/1lb_JarVw5o) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/ПараметрыШагов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/ПараметрыШагов.MD)
       1. Снипеты шагов. Сообщение: "Не найдена процедура или функция для выполнения шага"  [(Видео)](https://youtu.be/Nc492BKdGt4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/СнипетыШагов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/СнипетыШагов.MD)
       1. Спецсимволы в шагах сценариев.  [(Видео)](https://youtu.be/tNYLD7IOMfc) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/СпецсимволыВШагахСценариев.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/СпецсимволыВШагахСценариев.MD)
       1. Условия.  [(Видео)](https://youtu.be/EZ1iU3nzdPY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/УсловияВСценариях.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/УсловияВСценариях.MD)
       1. Циклы.  [(Видео)](https://youtu.be/EjkA50qWdLc) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/ЦиклыВСценариях.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/ЦиклыВСценариях.MD)
       1. Попытка/Исключение.  [(Видео)](https://youtu.be/yPSWjU3ocrE) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/ПопыткаИсключение.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/ПопыткаИсключение.MD)
       1. Тэг снятия скриншотов @screenshot.  [(Видео)](https://youtu.be/hx9yFZPO0GE) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/ТегСнятияСкриншотов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/ТегСнятияСкриншотов.MD)
       1. Тэг записи видео выполнения сценария @recordvideo.  [(Видео)](https://youtu.be/-eELGdGWEA0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/ТегЗаписиВидеоВыполненияСценария.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/ТегЗаписиВидеоВыполненияСценария.MD)

   1. Группы шагов в сценарии.
       1. Как работают группы шагов. Тэг @tree.  [(Видео)](https://youtu.be/Mc7zeXSKzh0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/ГруппыШагов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/ГруппыШагов.MD)
   
   1. Подсценарии.
       1. Подсценарии. Тэг @exportscenarios. Передача параметров в подсценарии.  [(Видео)](https://youtu.be/79LG8K7MwJ0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/ПодсценарииЧастьОдин.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/ПодсценарииЧастьОдин.MD)
       1. Передача таблиц в подсценарии.  [(Видео)](https://youtu.be/ANC0qgZiFwo) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/ПередачаТаблицВПодсценарии.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/ПередачаТаблицВПодсценарии.MD)
       1. Передача многострочных строк в подсценарии.  [(Видео)](https://youtu.be/cAEWDYB29PA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/ПередачаМногострочныхСтрокВПодсценарии.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/ПередачаМногострочныхСтрокВПодсценарии.MD)
       1. Как параметр подсценария поместить в переменную.  [(Видео)](https://youtu.be/jgOdgtU0_zo) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава06/КакПараметрПодсценарияПоместитьВПеременную.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава06/КакПараметрПодсценарияПоместитьВПеременную.MD)


### Глава 4. Библиотека доступных шагов
   1. Работа с деревом известных шагов. Поиск.  [(Видео)](https://youtu.be/annzMFUNA-Q) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава04/ОсновнаяИнформацияПоДеревуИзвестныхШагов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава04/ОсновнаяИнформацияПоДеревуИзвестныхШагов.MD)
   1. Дерево шагов с поддержкой других языков.  [(Видео)](https://youtu.be/mOJjCjQZwgk) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава04/ДеревоШаговДругиеЯзыки.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава04/ДеревоШаговДругиеЯзыки.MD)

### Глава 5. Исследователь формы
   * Как работает исследователь формы.  [(Видео)](https://youtu.be/eERYaIgb_Q0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава05/КакРаботаетИсследовательФормы.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава05/КакРаботаетИсследовательФормы.MD)

### Глава 6. Переменные.
   1. Простые переменные.
       1. Простой пример использования переменных.  [(Видео)](https://youtu.be/44g8Ohxokgs) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава06/ПростойПримерИспользованияПеременных.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава06/ПростойПримерИспользованияПеременных.MD)
       1. Типы переменных. Как получить текущую дату в переменную.  [(Видео)](https://youtu.be/cmE8VwBzvXQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава06/ТипыПеременныхКакПолучитьТекущуюДату.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава06/ТипыПеременныхКакПолучитьТекущуюДату.MD)
       1. Как параметр подсценария поместить в переменную.  [(Видео)](https://youtu.be/jgOdgtU0_zo) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава06/КакПараметрПодсценарияПоместитьВПеременную.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава06/КакПараметрПодсценарияПоместитьВПеременную.MD)
       1. Как посмотреть значение переменной. Табло переменных.  [(Видео)](https://youtu.be/qImUZ_bw9TA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава06/КакПосмотретьЗначениеПеременнойТаблоПеременных.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава06/КакПосмотретьЗначениеПеременнойТаблоПеременных.MD)
       1. Использование переменных внутри параметров шагов.  [(Видео)](https://youtu.be/KwNFE0ghwxw) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава06/ИспользованиеПеременныхВнутриПараметровШагов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава06/ИспользованиеПеременныхВнутриПараметровШагов.MD)
       1. Особенности передачи переменных в шаги, которые вычисляют выражение.  [(Видео)](https://youtu.be/B969YqY0cks) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава06/ОсобенностиПередачиПеременныхВШагиКоторыеВычисляютВыражение.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава06/ОсобенностиПередачиПеременныхВШагиКоторыеВычисляютВыражение.MD)
       1. Зарезервированные имена переменных КаталогПроекта, КаталогИнструментов, КаталогФичи.  [(Видео)](https://youtu.be/VlRoLQadiGQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава06/ЗарезервированныеИменаПеременных.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава06/ЗарезервированныеИменаПеременных.MD)
       1. Создание переменных кодом.  [(Видео)](https://youtu.be/phWX-N0go8U) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава06/СозданиеПеременныхКодом.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава06/СозданиеПеременныхКодом.MD)
       1. Как использовать переменную для вычисления выражения на сервере.  [(Видео)](https://youtu.be/LbKdG7BToGA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава06/КакИспользоватьПеременнуюДляВычисленияНаСервере.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава06/КакИспользоватьПеременнуюДляВычисленияНаСервере.MD)
   1. Секция "Переменные".
        - Простые переменные.  [(Видео)](https://youtu.be/L_LbssynWos) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/КакУстроенFeatureФайлСекцияПеременныеПростые.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/КакУстроенFeatureФайлСекцияПеременныеПростые.MD)
        - Табличные переменные.  [(Видео)](https://youtu.be/Fxi-UAcg04c) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/КакУстроенFeatureФайлСекцияПеременныеТабличные.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/КакУстроенFeatureФайлСекцияПеременныеТабличные.MD)
        - Импорт переменных из других файлов.  [(Видео)](https://youtu.be/_8h-xfnf-D0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава03/ИмпортПеременныхИзДругихФайлов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава03/ИмпортПеременныхИзДругихФайлов.MD)
   1. Работа с переменными.
        - Как запомнить в переменную выражение на встроенном языке 1С.  [(Видео)](https://youtu.be/nRYDmCKss4U) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава06/КакЗапомнитьВПеременнуюВыражениеНаВстроенномЯзыке.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава06/КакЗапомнитьВПеременнуюВыражениеНаВстроенномЯзыке.MD)
        - Как передать глобальные переменные через файл VAParams.json.  [(Видео)](https://youtu.be/L01sQmN13o8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава06/КакПередатьГлобальныеПеременныеЧерезФайлVAParamsJson.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава06/КакПередатьГлобальныеПеременныеЧерезФайлVAParamsJson.MD)
        - Как удалить переменные.  [(Видео)](https://youtu.be/TB_gbGSk3qQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава06/КакУдалитьПеременные.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава06/КакУдалитьПеременные.MD)
        - Как сравнить две переменные.  [(Видео)](https://youtu.be/NE-IhDFBQSE) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава06/КакСравнитьДвеПеременные.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава06/КакСравнитьДвеПеременные.MD)

### Глава 7. Создание тестовых данных
   * Обзор.  [(Видео)](https://youtu.be/tilMo1pPHdU) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава07/СозданиеТестовыхДанныхОбзор.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава07/СозданиеТестовыхДанныхОбзор.MD)

### Глава 8. Приёмы работы
   1. Приёмы связанные с выполнением сценариев
        - Как проверить равенство табличного документа эталону.  [(Видео)](https://youtu.be/aEAPoEHlFOw) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/ПроверитьРавенствоТабличногоДокументаЭталону.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/ПроверитьРавенствоТабличногоДокументаЭталону.MD)
        - Как в сценарии выполнить код на языке 1С.  [(Видео)](https://youtu.be/5QBKER4O_zQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/КакВСценарииВыполнитьКодНаЯзыке1С.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/КакВСценарииВыполнитьКодНаЯзыке1С.MD)
        - Как изменить настройки Vanessa Automation во время выполнения сценария.  [(Видео)](https://youtu.be/9OZ4pHoLo20) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/КакИзменитьНастройкиVanessaAutomationВСценарии.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/КакИзменитьНастройкиVanessaAutomationВСценарии.MD)
        - Как правильно проверить видимость/доступность кнопки, элемента или пункта меню.  [(Видео)](https://youtu.be/eFiPofC73sU) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/КакПравильноПроверитьДоступностьКнопкиПоля.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/КакПравильноПроверитьДоступностьКнопкиПоля.MD)
        - Как программно записать элемент а потом открыть его навигационную ссылку.  [(Видео)](https://youtu.be/O6BfUYd4cW0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/КакПрограммноЗаписатьЭлементАПотомОткрытьЕгоНавигационнуюСсылку.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/КакПрограммноЗаписатьЭлементАПотомОткрытьЕгоНавигационнуюСсылку.MD)
        - Особенности шагов при работе с переключателями, гиперссылками и полями.  [(Видео)](https://youtu.be/h4hKsnpFezY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/ОсобенностиШаговПриВыбореЗначенияПоНомеру.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/ОсобенностиШаговПриВыбореЗначенияПоНомеру.MD)
        - Когда надо использовать паузу.  [(Видео)](https://youtu.be/RKAEGjOfk_s) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/КогдаНадоИспользоватьПаузу.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/КогдаНадоИспользоватьПаузу.MD)
        - Как закрыть браузер после окончания выполнения тестов.  [(Видео)](https://youtu.be/eMj1xJ0iAGY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/КакЗакрытьБраузерПослеОкончанияВыполненияТестов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/КакЗакрытьБраузерПослеОкончанияВыполненияТестов.MD)
        - Как вызвать сохранение в файл табличного документа или поля текстового документа.  [(Видео)](https://youtu.be/5JwT7PPlZAA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/КакВызватьСохранениеВФайлТабличногоДокументаИлиПоляТекстовогоДокумента.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/КакВызватьСохранениеВФайлТабличногоДокументаИлиПоляТекстовогоДокумента.MD)
        - Выбор файла из диалога выбора файлов.  [(Видео)](https://youtu.be/7JRvTU-0e3o) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/ВыборФайлаИзДиалогаВыбораФайлов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/ВыборФайлаИзДиалогаВыбораФайлов.MD)
        - Как вывести дополнительную информацию в лог выполнения сценариев.  [(Видео)](https://youtu.be/u_CE-I4ceUQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/КакВывестиДополнительнуюИнформациюВЛог.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/КакВывестиДополнительнуюИнформациюВЛог.MD)
   1. Прочие
        - Сравнить текст фича файла с другим файлом.  [(Видео)](https://youtu.be/bzgMA7MJbxw) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/СравнитьТекстФичаФайлаСДругимФайлом.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/СравнитьТекстФичаФайлаСДругимФайлом.MD)
        - Как понять что пошло не так при запуске тестов в CI контуре.  [(Видео)](https://youtu.be/zPLez7v8AnA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/КакПонятьЧтоПошлоНеТакПриЗапускеТестовВCIКонтуре.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/КакПонятьЧтоПошлоНеТакПриЗапускеТестовВCIКонтуре.MD)
        - Как получить шаги, проверяющие состояние формы.  [(Видео)](https://youtu.be/es4T-S5b96k) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/КакПолучитьШагиПроверяющиеСостояниеФормы.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/КакПолучитьШагиПроверяющиеСостояниеФормы.MD)
        - Как понять, что изменилось в форме, чтобы корректно дождаться нужного состояния формы.  [(Видео)](https://youtu.be/UGjID7kaNMM) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/КакПонятьЧтоИзменилосьВФормеЧтобыДождатьсяНужногоСостояния.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/КакПонятьЧтоИзменилосьВФормеЧтобыДождатьсяНужногоСостояния.MD)
        - Как быстро актуализировать шаг по данным ошибки.  [(Видео)](https://youtu.be/LvQ7KXelasE) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/КакБыстроАктуализироватьШагПоДаннымОшибки.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/КакБыстроАктуализироватьШагПоДаннымОшибки.MD)
        - Как получить подробную информацию о шаге.  [(Видео)](https://youtu.be/XjxFWc5kv_U) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/КакПолучитьПодробнуюИнформациюОШаге.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/КакПолучитьПодробнуюИнформациюОШаге.MD)
        - Когда в шагах можно использовать символ * (звездочка).  [(Видео)](https://youtu.be/KkbD27TA7UQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/КогдаВШагахМожноИспользоватьСимволЗвездочка.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/КогдаВШагахМожноИспользоватьСимволЗвездочка.MD)
        - Как посмотреть подробные детали ошибки. Гиперссылка "Детали".  [(Видео)](https://youtu.be/gvL35W-dkP0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/КакПосмотретьПодробныеДеталиОшибкиГиперссылкаДетали.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/КакПосмотретьПодробныеДеталиОшибкиГиперссылкаДетали.MD)
        - Как тестировать HTML документ.  [(Видео)](https://youtu.be/BND69qBqmJc) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/КакТестироватьHTMLДокумент.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/КакТестироватьHTMLДокумент.MD)
   
### Глава 9. Allure. Отчет о запуске тестов в формате Allure
   * Отчет о выполнении сценариев в формате Allure.  [(Видео)](https://youtu.be/cPHKeN59S9k) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава09/ОтчетОВыполненииСценариевВФорматеAllure.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава09/ОтчетОВыполненииСценариевВФорматеAllure.MD)
   * Установка меток Allure (управление иерархией) из шагов сценария.  [(Видео)](https://youtu.be/WH1iZJpJHW0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава09/УстановкаМетокAllureИзШаговСценария.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава09/УстановкаМетокAllureИзШаговСценария.MD)

### Глава 10. Автоинструкции/Автодокументация
   * Обзор возможностей.  [(Видео)](https://youtu.be/LwDdtKsijHA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава10/АвтоинструкцииОбзорВозможностей.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава10/АвтоинструкцииОбзорВозможностей.MD)

### Глава 11. UI Automation
   1. Шаги для работы с UI Automation.  [(Видео)](https://youtu.be/bxmXLnRNwC8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава11/ШагиДляРаботыСUIAutomation.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава11/ШагиДляРаботыСUIAutomation.MD)
   1. Как закрыть сеанс 1С в обычных формах с помощью UI Automation.  [(Видео)](https://youtu.be/iPUe7CC_oUQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава11/ЗакрытьСеанс1СВОбычныхФормахUIAutomation.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава11/ЗакрытьСеанс1СВОбычныхФормахUIAutomation.MD)
   1. Как открыть окно "О программе" и получить из него данные лицензий.  [(Видео)](https://youtu.be/5uuLbuXy_Zc) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава11/КакОткрытьОкноОПрограммеИПолучитьДанныеЛицензий.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава11/КакОткрытьОкноОПрограммеИПолучитьДанныеЛицензий.MD)
   1. Как открыть окно "Все функции" с помощью UI Automation.  [(Видео)](https://youtu.be/Qu0AaWMakMk) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава11/КакОткрытьОкноВсеФункцииСПомощьюUIAutomation.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава11/КакОткрытьОкноВсеФункцииСПомощьюUIAutomation.MD)

### Глава 12. Расширение VAExtension
   * Описание работы с расширением VAExtension.  [(Видео)](https://youtu.be/WftA53KNf94) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава12/ОписаниеРаботыСРасширениемVAExtension.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава12/ОписаниеРаботыСРасширениемVAExtension.MD)

### Глава 13. Редактор сценариев VAEditor
   1. Контекстное меню редактора.
        - Подбор шагов.  [(Видео)](https://youtu.be/Y0RQ7lvGPZQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава13/КонтекстноеМенюРедактораПодборШагов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава13/КонтекстноеМенюРедактораПодборШагов.MD)
        - Выполнение сценария.  [(Видео)](https://youtu.be/8CK0uCR7WBw) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава13/КонтекстноеМенюРедактораВыполнениеСценария.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава13/КонтекстноеМенюРедактораВыполнениеСценария.MD)
        - Открытие файлов.  [(Видео)](https://youtu.be/xXhZAmjuezQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава13/КонтекстноеМенюРедактораОткрытиеФайлов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава13/КонтекстноеМенюРедактораОткрытиеФайлов.MD)
        - Точки останова.  [(Видео)](https://youtu.be/HUuoEI9YLDM) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава13/КонтекстноеМенюРедактораТочкиОстанова.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава13/КонтекстноеМенюРедактораТочкиОстанова.MD)
        - Редактор таблиц Gherkin.  [(Видео)](https://youtu.be/mcBo09S5rAA) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава13/КонтекстноеМенюРедактораРедакторТаблицGherkin.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава13/КонтекстноеМенюРедактораРедакторТаблицGherkin.MD)
        - Получить макет по таблице Gherkin.  [(Видео)](https://youtu.be/jPtAznjP5Xg) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава13/КонтекстноеМенюРедактораПолучитьМакетПоТаблицеGherkin.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава13/КонтекстноеМенюРедактораПолучитьМакетПоТаблицеGherkin.MD)
        - Получить шаги по данным клиента тестирования.  [(Видео)](https://youtu.be/cJXmooN-cx0) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава13/КонтекстноеМенюРедактораПолучитьШагиПоДаннымКлиентаТестирования.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава13/КонтекстноеМенюРедактораПолучитьШагиПоДаннымКлиентаТестирования.MD)
        - Перейти к следующей строке с ошибкой.  [(Видео)](https://youtu.be/hAObaILv8Z8) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава13/КонтекстноеМенюРедактораПерейтиКСледующейСтрокеСОшибкой.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава13/КонтекстноеМенюРедактораПерейтиКСледующейСтрокеСОшибкой.MD)
        - Контекстное меню Monaco.  [(Видео)](https://youtu.be/vXMcSTqqaEY) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава13/КонтекстноеМенюРедактораКонтекстноеМенюMonaco.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава13/КонтекстноеМенюРедактораКонтекстноеМенюMonaco.MD)
   1. Прочее.
        - Горячие клавиши редактора.  [(Видео)](https://youtu.be/SvA1CXyGrf4) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/ГорячиеКлавишиРедактора.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/ГорячиеКлавишиРедактора.MD)
        - Отображение картинок в редакторе.  [(Видео)](https://youtu.be/OzCbEZwpf84) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава08/ОтображениеКартинокВРедакторе.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава08/ОтображениеКартинокВРедакторе.MD)

### Глава 14. Работа с браузером
   * Описание прямой работы с браузером.  [(Видео)](https://youtu.be/Cv65y-MyYqQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава14/ОписаниеПрямойРаботыСБраузером.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава14/ОписаниеПрямойРаботыСБраузером.MD)

### Глава 15. Решение технических проблем
   * Появилось сообщение - "Неизвестный идентификатор формы"  [(Видео)](https://youtu.be/EsIqUYSUIsQ) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава15/ПоявилосьСообщениеНеизвестныйИдентификаторФормы.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава15/ПоявилосьСообщениеНеизвестныйИдентификаторФормы.MD)
   * Появилось сообщение - "Обнаружен запрет синхронных вызовов"  [(Видео)](https://youtu.be/RRJgNe2UoOs) [(PDF)](https://vanessa-files.do.bit-erp.ru/Doc/1.2.041.1/PDF/Глава15/ПоявилосьСообщениеОбнаруженЗапретСинхронныхВызовов.pdf) [(MD)](https://github.com/Pr-Mex/vanessa-automation/tree/develop/docs/MainHelp/1.2.041.1/Глава15/ПоявилосьСообщениеОбнаруженЗапретСинхронныхВызовов.MD)
